# agentic-trading

./: .gitignore  Makefile  README.md  alignment-report.md  candidate-evaluation.json  candidate-evaluation.md  candidate-final.md  candidate-pre-critic.md  candidate-pre-verify.md  candidate-verification.json  candidate-verification.md  candidate_shortlist.json  candidate_shortlist.md  candidates-2026-04-20-bullets.md  cooldown.json  cron_neural_trading.txt  cycle-timing-pre-critic.md  cycle-timing-raw.md  cycle-timing-report.md  cycle-timing-review.md  cycle_history.json  deep-dive-pre-analyst.md  deep-dive-raw.md  deep-dive-review.md  exit-review-pre-analyst.md  exit-review-pre-critic.md  exit-review-raw.md  exit-review-report.md  exit-review-review.md  gemini.md  hallucination-audit.md  knowledge-consolidation-pre-critic.md  knowledge-consolidation-raw.md  knowledge-consolidation-report.md  knowledge-consolidation-review.md  knowledge-consolidation-updates.json  knowledge-system-reference.md  large-cap-analysis.md  loss-evaluator-flags.md  market-context-pre-analyst.md  (+40 more)
.workflow-state/: 0440262a-f2b7-4480-baa6-53ff189927fa.json  0fb37897-5605-4a9f-a9ae-2d4e75a97dba.json  11e1ed42-9158-4c8e-bdd9-f83dcf656da8.json  151b3209-1bd0-48e7-bae3-2bf5e231247c.json  19941ad6-634c-46b2-9e4c-da4c21535090.json  1a6d4a7f-8629-4a62-ad99-b5395da773af.json  1aef3b10-fc06-4f9f-a599-5ff30169d3da.json  1d9b6485-06c5-4d98-baec-0cd531b484da.json  1da37766-07be-42eb-b9e8-83ef3897b570.json  1e663c3e-664e-4bd2-86a7-a60e30b86fb4.json  1f8ac351-2c6f-4108-9b8e-7fb212bd2da8.json  (+70 more)
plans/: backlog.md  (+79 more)
(+696 files in other folders)
